# ai-meter

./: Cargo.toml  Dockerfile  README.md  REAMDE.md  example.env  insomnia-req-collection.json  tables.drawio
.github/workflows/: docker-publish.yml
migrations/2022-02-24-101759_create_devices/: up.sql
migrations/2022-02-24-102116_create_meters/: down.sql  up.sql
migrations/2022-02-24-102445_create_meterdevices/: down.sql  up.sql
src/: dto.rs  error.rs  handler.rs  lib.rs  model.rs  schema.rs  service.rs  sql.rs  util.rs
src/error/: macros.rs  meter.rs
src/handler/: device.rs  health.rs  meter.rs
src/model/: db.rs  health.rs  meter.rs
src/service/: device.rs  health.rs  meter.rs  meterdevice.rs
src/sql/: device.rs  health.rs  meter.rs  meterdevice.rs
