[package]
name = "meter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "meter"
path = "src/lib.rs"


[[bin]]
name = "server"
path = "src/bin/server.rs" 

[dependencies]
axum = "0.4.5"
clap = { version = "3.1.0", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "tracing"] }
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
tower-http = { version = "0.2.2", features = ["trace"] }
