[package]
name = "meter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "meter"
path = "src/lib.rs"


[[bin]]
name = "server"
path = "src/bin/server.rs" 

[dependencies]
axum = "0.4.5"
clap = { version = "3.1", features = ["derive", "env"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "time"] }
dotenv = "0.15"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.12"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }
